--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "\"Open to Inter\"",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1" ,
-    "start" : "node index.js",
-    "dev" : "nodemon index.js"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node index.js",
+    "dev": "nodemon index.js"
   },
   "repository": {
     "type": "git",
@@ -22,7 +22,6 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "mongoose": "^6.7.2",
-    "multer": "^1.4.5-lts.1"
+    "mongoose": "^6.7.2"
   }
 }
